# dent

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: bin.rs  error.rs  fmt.rs  lib.rs  log.rs  lr.rs  num.rs  plot.rs  summary.rs  t_dist.rs  t_test.rs
src/plot/: figure.rs  mod.rs
support/: generate
support/data/: 1.1_0.1_100  1.1_0.1_1000  1.1_1_100  1.1_1_1000  10_0.1_100  10_0.1_1000  10_1_100  10_1_1000  1_0.1_100  1_0.1_1000  1_1_100  1_1_1000  lr-0_1_100-x  lr-0_1_100-y  lr-0_1_1000-x  lr-0_1_1000-y  lr-1_5_1000-x  lr-1_5_1000-y
support/kat/: lr-0_1_100  lr-0_1_1000  lr-1_5_1000  summary_1.1_0.1_100  summary_1.1_0.1_1000  summary_1.1_1_100  summary_1.1_1_1000  summary_10_0.1_100  summary_10_0.1_1000  summary_10_1_100  summary_10_1_1000  summary_1_0.1_100  summary_1_0.1_1000  summary_1_1_100  summary_1_1_1000  ttest-1.1_0.1_100-1.1_0.1_1000  ttest-1.1_0.1_100-1.1_1_100  ttest-1.1_0.1_100-10_0.1_100  ttest-1.1_0.1_100-10_0.1_1000  ttest-1.1_0.1_100-10_1_100  ttest-1.1_0.1_100-10_1_1000  ttest-1.1_0.1_100-1_0.1_100  ttest-1.1_0.1_100-1_1_100  ttest-1.1_0.1_1000-10_0.1_100  ttest-1.1_0.1_1000-10_1_100  ttest-1.1_0.1_1000-1_1_100  ttest-1.1_1_100-1.1_0.1_1000  ttest-1.1_1_100-10_0.1_100  ttest-1.1_1_100-10_1_100  ttest-1.1_1_100-10_1_1000  ttest-1.1_1_100-1_1_100  ttest-1.1_1_1000-1.1_0.1_100  ttest-1.1_1_1000-1.1_0.1_1000  ttest-1.1_1_1000-1.1_1_100  ttest-1.1_1_1000-10_0.1_100  ttest-1.1_1_1000-10_0.1_1000  ttest-1.1_1_1000-10_1_100  ttest-1.1_1_1000-10_1_1000  ttest-1.1_1_1000-1_0.1_100  ttest-1.1_1_1000-1_1_100  (+41 more)
tests/: exe.rs  kat.rs
(+27 files in other folders)
