[package]
authors = ["Joe Ranweiler <joe@lemma.co>"]
description = "Library and tool for summarizing and comparing small data sets."
keywords = ["statistics", "testing"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ranweiler/dent"
name = "dent"
version = "0.1.0"

[dependencies]
clap = "^2.26.1"

[[bin]]
name = "dent"
path = "src/bin.rs"
